--- a/EduHome/Views/Shared/_Layout.cshtml
+++ b/EduHome/Views/Shared/_Layout.cshtml
@@ -70,42 +70,26 @@
                                 <nav>
                                     <ul>
                                         <li>
-                                            <a asp-controller="home" asp-action="index">Home</a>
+                                            <a asp-controller="home">Home</a>
                                         </li>
-                                        <li><a href="about.html">About</a></li>
+                                        <li><a asp-controller="about">About</a></li>
                                         <li>
-                                            <a href="course.html">courses</a>
-                                            <ul>
-                                                <li><a href="course.html">courses</a></li>
-                                                <li><a href="course-details.html">courses details</a></li>
-                                            </ul>
+                                            <a asp-controller="course">courses</a>
+                                           
                                         </li>
                                         <li>
-                                            <a href="event.html">event</a>
-                                            <ul>
-                                                <li><a href="event.html">event</a></li>
-                                                <li><a href="event-left-side-bar.html">event left sidebar</a></li>
-                                                <li><a href="event-right-side-bar.html">event right sidebar</a></li>
-                                                <li><a href="event-details.html">event details</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="hidden-sm">
-                                            <a href="teacher.html">teacher</a>
-                                            <ul>
-                                                <li><a href="teacher.html">teacher</a></li>
-                                                <li><a href="teacher-details.html">teacher details</a></li>
-                                            </ul>
+                                            <a asp-controller="event">event</a>
+                                         
                                         </li>
                                         <li>
-                                            <a href="blog.html">blog</a>
-                                            <ul>
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="blog-left-side-bar.html">blog left sidebar</a></li>
-                                                <li><a href="blog-right-side-bar.html">blog righ sidebar</a></li>
-                                                <li><a href="blog-details.html">blog details</a></li>
-                                            </ul>
+                                            <a asp-controller="teacher">teacher</a>
+                                          
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li>
+                                            <a asp-controller="blog" asp-action="index">blog</a>
+                                           
+                                        </li>
+                                        <li><a asp-controller="contact">Contact</a></li>
                                         <li><a href="#">Buy Now</a>
                                     </ul>
                                 </nav>
