--- a/EduHome/Views/Home/Index.cshtml
+++ b/EduHome/Views/Home/Index.cshtml
@@ -8,79 +8,32 @@
     <div class="slider-owl owl-theme owl-carousel">
         @foreach (Slider item in Model.Sliders)
         {
-        <!-- Start Slingle Slide -->
-        <div class="single-slide item" style="background-image: url(img/slider/@item.Image)">
-            <!-- Start Slider Content -->
-            <div class="slider-content-area">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-10 col-md-offset-1">
-                            <div class="slide-content-wrapper">
-                                <div class="slide-content text-center">
-                                    <h2>@item.Title </h2>
-                                    <p>@item.Description</p>
-                                    <a class="default-btn" @item.Link>Learn more</a>
+            <!-- Start Slingle Slide -->
+            <div class="single-slide item" style="background-image: url(img/slider/@item.Image)">
+                <!-- Start Slider Content -->
+                <div class="slider-content-area">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-10 col-md-offset-1">
+                                <div class="slide-content-wrapper">
+                                    <div class="slide-content text-center">
+                                        <h2>@item.Title </h2>
+                                        <p>@item.Description</p>
+                                        <a class="default-btn" @item.Link>Learn more</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- Start Slider Content -->
             </div>
-            <!-- Start Slider Content -->
-        </div>
-        <!-- End Slingle Slide -->
+            <!-- End Slingle Slide -->
 
         }
     </div>
 </section>
 <!-- Background Area End -->
-<!-- Service Start -->
-<div class="service-area two pt-150 pb-150">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-sm-4 col-xs-12">
-                <div class="single-service">
-                    <h3><a href="teacher.html">PROFESSIONAL TEACHER</a></h3>
-                    <p>I must explain to you how all this mistaken denouncing pleure and praising pain </p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-12">
-                <div class="single-service">
-                    <h3><a href="teacher.html">PROFESSIONAL TEACHER</a></h3>
-                    <p>I must explain to you how all this mistaken denouncing pleure and praising pain </p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-12">
-                <div class="single-service">
-                    <h3><a href="teacher.html">PROFESSIONAL TEACHER</a></h3>
-                    <p>I must explain to you how all this mistaken denouncing pleure and praising pain </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Service End -->
-<!-- About Start -->
-<div class="about-area pb-155">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-sm-6">
-                <div class="about-content">
-                    <h2>WELCOME TO <span>EDUHOME</span></h2>
-                    <p>I must explain to you how all this mistaken idea of denouncing pleure and prsing pain was born and I will give you a complete account of the system, and expound the actual teachings  the master-builder of humanit happiness</p>
-                    <p class="hidden-sm">I must explain to you how all this mistaken idea of denouncing pleure and prsing pain was born and I will give you a complete account of the system</p>
-                    <a class="default-btn" href="about.html">view courses</a>
-                </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-                <div class="about-img">
-                    <img src="~/img/about/about.png" alt="about">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- About End -->
 <!-- Courses Area Start -->
 <div class="courses-area two pt-150 pb-150 text-center">
     <div class="container">
@@ -93,38 +46,38 @@
             </div>
         </div>
         <div class="row">
-          
+
             @foreach (Course course in Model.Courses.Skip(0).Take(3))
             {
-             
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-course">
-                    <div class="course-img">
-                        <a asp-controller="course" asp-action="detail" asp-route-id="@course.Id">
-                            <img src="~/img/course/@course.Image" alt="course">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="course-content">
-                        <h3><a href="course-details.html">@course.Name</a></h3>
-                        <p>@course.Description.Substring(0,50)</p>
-                        <a class="default-btn" asp-controller="course" asp-action="detail" asp-route-id="@course.Id">read more</a>
+
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="single-course">
+                        <div class="course-img">
+                            <a asp-controller="course" asp-action="detail" asp-route-id="@course.Id">
+                                <img src="~/img/course/@course.Image" alt="course">
+                                <div class="course-hover">
+                                    <i class="fa fa-link"></i>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="course-content">
+                            <h3><a href="course-details.html">@course.Name</a></h3>
+                            <p>@course.Description.Substring(0, 50)</p>
+                            <a class="default-btn" asp-controller="course" asp-action="detail" asp-route-id="@course.Id">read more</a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
             }
-            
 
-          
+
+
         </div>
     </div>
 </div>
 <!-- Courses Area End -->
 <!-- Notice Start -->
-<section class="notice-area two pt-140">
+<section class="notice-area two three pt-140 pb-100">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-6 col-xs-12">
@@ -132,7 +85,7 @@
                     <h3>TAKE A VIDEO TOUR</h3>
                     <div class="notice-video">
                         <div class="video-icon video-hover">
-                            <a class="video-popup" href="https://www.youtube.com/watch?v=to6Ghf8UL7o">
+                            <a class="video-popup" href="">
                                 <i class="zmdi zmdi-play"></i>
                             </a>
                         </div>
@@ -174,8 +127,29 @@
     </div>
 </section>
 <!-- Notice End -->
+<!-- About Start -->
+<div class="about-area pb-135 pt-130 bg-light">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-sm-6">
+                <div class="about-content">
+                    <h2><span>EDUHOME</span> the best education theme for you</h2>
+                    <p>I must explain to you how all this mistaken idea of denouncing pleure and prsing pain was born and I will give you a complete account of the system, and expound the actual teachings  the master-builder of humanit happiness</p>
+                    <p class="hidden-sm">I must explain to you how all this mistaken idea of denouncing pleure and prsing pain was born and I will give you a complete account of the system</p>
+                    <a class="default-btn" href="about.html">buy now</a>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-6">
+                <div class="about-img">
+                    <img src="~/img/about/about.png" alt="about">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- About End -->
 <!-- Event Area Start -->
-<div class="event-area two text-center pt-100 pb-145">
+<div class="event-area three text-center pt-100 pb-115">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -186,33 +160,24 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 col-sm-12 col-xs-12">
+            <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-event mb-35">
                     <div class="event-img">
-                        <a href="event-details.html"><img src="~/img/event/event1.jpg" alt="event"></a>
-                    </div>
-                    <div class="event-content text-left">
-                        <h3>20 June 2017</h3>
-                        <h4><a href="event-details.html">ADVANCE PHP WORKSHOP</a></h4>
-                        <ul>
-                            <li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-                            <li><i class="fa fa-map-marker"></i>New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
+                        <a href="event-details.html">
+                            <img src="~/img/event/event5.jpg" alt="event">
+                            <div class="course-hover">
+                                <i class="fa fa-link"></i>
+                            </div>
+                        </a>
+                        <div class="event-date">
+                            <h3>20 <span>jun</span></h3>
                         </div>
                     </div>
-                </div>
-                <div class="single-event hidden-sm hidden-xs">
-                    <div class="event-img">
-                        <a href="event-details.html"><img src="~/img/event/event3.jpg" alt="event"></a>
-                    </div>
                     <div class="event-content text-left">
-                        <h3>16 June 2017</h3>
-                        <h4><a href="event-details.html">learning english history</a></h4>
+                        <h4><a href="event-details.html">ADVANCE PHP WORKSHOP</a></h4>
                         <ul>
-                            <li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-                            <li><i class="fa fa-map-marker"></i>New Yourk City</li>
+                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
+                            <li><span>venue</span> New Yourk City</li>
                         </ul>
                         <div class="event-content-right">
                             <a class="default-btn" href="event-details.html">join now</a>
@@ -220,33 +185,49 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-sm-12 col-xs-12">
+            <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-event mb-35">
                     <div class="event-img">
-                        <a href="event-details.html"><img src="~/img/event/event2.jpg" alt="event"></a>
+                        <a href="event-details.html">
+                            <img src="~/img/event/event6.jpg" alt="event">
+                            <div class="course-hover">
+                                <i class="fa fa-link"></i>
+                            </div>
+                        </a>
+                        <div class="event-date">
+                            <h3>18 <span>jun</span></h3>
+                        </div>
                     </div>
                     <div class="event-content text-left">
-                        <h3>18 June 2017</h3>
-                        <h4><a href="event-details.html">DIGITAL MARKETING ANALYSIS</a></h4>
+                        <h4><a href="event-details.html">learning english history</a></h4>
                         <ul>
-                            <li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-                            <li><i class="fa fa-map-marker"></i>New Yourk City</li>
+                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
+                            <li><span>venue</span> New Yourk City</li>
                         </ul>
                         <div class="event-content-right">
                             <a class="default-btn" href="event-details.html">join now</a>
                         </div>
                     </div>
                 </div>
-                <div class="single-event hidden-sm hidden-xs">
+            </div>
+            <div class="col-md-4 hidden-sm col-xs-12">
+                <div class="single-event mb-35">
                     <div class="event-img">
-                        <a href="event-details.html"><img src="~/img/event/event3.jpg" alt="event"></a>
+                        <a href="event-details.html">
+                            <img src="~/img/event/event7.jpg" alt="event">
+                            <div class="course-hover">
+                                <i class="fa fa-link"></i>
+                            </div>
+                        </a>
+                        <div class="event-date">
+                            <h3>16 <span>jun</span></h3>
+                        </div>
                     </div>
                     <div class="event-content text-left">
-                        <h3>14 June 2017</h3>
-                        <h4><a href="event-details.html">UI & UX DESIGNER MEETUP</a></h4>
+                        <h4><a href="event-details.html">UI &amp; UX DESIGNER MEETUP</a></h4>
                         <ul>
-                            <li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-                            <li><i class="fa fa-map-marker"></i>New Yourk City</li>
+                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
+                            <li><span>venue</span> New Yourk City</li>
                         </ul>
                         <div class="event-content-right">
                             <a class="default-btn" href="event-details.html">join now</a>
@@ -259,7 +240,7 @@
 </div>
 <!-- Event Area End -->
 <!-- Testimonial Area Start -->
-<div class="testimonial-area pt-110 pb-105 text-center">
+<div class="testimonial-area three pt-110 pb-105 text-center">
     <div class="container">
         <div class="row">
             <div class="testimonial-owl owl-theme owl-carousel">
